#195: Add word-wrapping for buttons to fix the problem with "Continue without updating" button

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -296,7 +296,7 @@ progress {
 	border: none;
 	border-radius: 30px;
 	padding: 14px 30px;
-	white-space: nowrap;
+	white-space: normal;
 	cursor: pointer;
 	text-align: center;
 	text-decoration: none;
